v3.1.1/_sources/plugins/license_device_license_details_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.license_device_license_details_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.license_device_license_details_info -- Information module for License Device License Details
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.1).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.license_device_license_details_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all License Device License Details.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-device_uuid"></div>
                    <b>device_uuid</b>
                    <a class="ansibleOptionLink" href="#parameter-device_uuid" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Device_uuid path parameter. Id of device.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-headers"></div>
                    <b>headers</b>
                    <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Additional headers.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `License Device License Details reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the License Device License Details object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all License Device License Details
      cisco.dnac.license_device_license_details_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        device_uuid: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">list</span>
                       / <span style="color: purple">elements=dictionary</span>                    </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">[
      {
        &quot;device_uuid&quot;: &quot;string&quot;,
        &quot;site&quot;: &quot;string&quot;,
        &quot;model&quot;: &quot;string&quot;,
        &quot;license_mode&quot;: &quot;string&quot;,
        &quot;is_license_expired&quot;: true,
        &quot;software_version&quot;: &quot;string&quot;,
        &quot;network_license&quot;: &quot;string&quot;,
        &quot;evaluation_license_expiry&quot;: &quot;string&quot;,
        &quot;device_name&quot;: &quot;string&quot;,
        &quot;device_type&quot;: &quot;string&quot;,
        &quot;dna_level&quot;: &quot;string&quot;,
        &quot;virtual_account_name&quot;: &quot;string&quot;,
        &quot;ip_address&quot;: &quot;string&quot;,
        &quot;mac_address&quot;: &quot;string&quot;,
        &quot;sntc_status&quot;: &quot;string&quot;,
        &quot;feature_license&quot;: [
          &quot;string&quot;
        ],
        &quot;has_sup_cards&quot;: true,
        &quot;udi&quot;: &quot;string&quot;,
        &quot;stacked_devices&quot;: [
          {
            &quot;mac_address&quot;: &quot;string&quot;,
            &quot;id&quot;: &quot;string&quot;,
            &quot;role&quot;: &quot;string&quot;,
            &quot;serial_number&quot;: &quot;string&quot;
          }
        ],
        &quot;is_stacked_device&quot;: true,
        &quot;access_points&quot;: [
          {
            &quot;ap_type&quot;: &quot;string&quot;,
            &quot;count&quot;: &quot;string&quot;
          }
        ],
        &quot;chassis_details&quot;: {
          &quot;board_serial_number&quot;: &quot;string&quot;,
          &quot;modules&quot;: [
            {
              &quot;module_type&quot;: &quot;string&quot;,
              &quot;module_name&quot;: &quot;string&quot;,
              &quot;serial_number&quot;: &quot;string&quot;,
              &quot;id&quot;: &quot;string&quot;
            }
          ],
          &quot;supervisor_cards&quot;: [
            {
              &quot;serial_number&quot;: &quot;string&quot;,
              &quot;supervisor_card_type&quot;: &quot;string&quot;,
              &quot;status&quot;: &quot;string&quot;
            }
          ],
          &quot;port&quot;: 0
        }
      }
    ]</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

